--- a/Frontend/MinistrantenScheduler/src/components/UserSettings/styles.css
+++ b/Frontend/MinistrantenScheduler/src/components/UserSettings/styles.css
@@ -7,7 +7,7 @@
 
 .fixed_header tbody{
     display: block;
-    width: 100%;
+    width: 95%;
     overflow: auto;
     height: 400px;
 
@@ -15,7 +15,7 @@
 
 .fixed_header thead tr {
     display: block;
-    width: 100%;
+    width: 95%;
 }
 
 .fixed_header thead {
@@ -45,4 +45,13 @@ table {
 }
 .checkbox-color {
     color: black;
+}
+.back-reply-button{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 30px;
+    height: 30px;
+    background: url("../Images/reply-all-button.png");
+    background-size: cover;
 }
